--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NEXT_APP_GITHUB_REPO=https://github.com/dominiatrix/juplash
-NEXT_APP_LINKEDIN_PROFILE=https://www.linkedin.com/in/juliana-otenia-7b0140236
+NEXT_PUBLIC_GITHUB_REPO=https://github.com/dominiatrix/juplash
+NEXT_PUBLIC_LINKEDIN_PROFILE=https://www.linkedin.com/in/juliana-otenia-7b0140236
+NEXT_PUBLIC_UNSPLASH_BACKEND_URL=https://api.unsplash.com
